United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6906727 UseCompressedOops: some card-marking fixes related to object arrays
6906727 : UseCompressedOops: some card-marking fixes related to object arrays

Details
Type:
Bug
Submit Date:
2009-12-03
Status:
Resolved
Updated Date:
2011-03-22
Project Name:
JDK
Resolved Date:
2010-01-14
Component:
hotspot
OS:
generic,solaris_10
Sub-Component:
gc
CPU:
x86,generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
hs16,6u14p
Fixed Versions:
hs17

Related Reports
Backport:
Backport:
Backport:
Backport:
Duplicate:
Duplicate:
Duplicate:
Duplicate:
Relates:

Sub Tasks

Description
This is a CR created with the express purpose of targeting a small
subset of the more extensive fixes envisaged in 6904516 more promptly
than would be possible with all of the fixes in 6904516.

See comments section.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/master/rev/9adb2f184e47
                                     
2009-12-05
SUGGESTED FIX

http://analemma.sfbay/net/neeraja/export/ysr/hotspot-gc/webrev
                                     
2009-12-04
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/6aa7255741f3
                                     
2009-12-04
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/baseline/rev/9adb2f184e47
                                     
2009-12-04
WORK AROUND

-XX:-UseCompressedOops if in -d64, with a usually quite considerable
resulting loss in performance.
                                     
2009-12-03
EVALUATION

Stort-term risk mitigation in hs16 (see subCR).
                                     
2009-12-03



Hardware and Software, Engineered to Work Together